Bug 115871 - "Reset to Parent" button in Paragraph Style dialog does not revert to parent values for any of the controls in the Outline & List tab
Summary: "Reset to Parent" button in Paragraph Style dialog does not revert to parent ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Styles-Dialog
  Show dependency treegraph
 
Reported: 2018-02-20 08:06 UTC by Kenneth Hanson
Modified: 2023-11-21 17:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Hanson 2018-02-20 08:06:28 UTC
Description:
When the "Standard" button is pressed, most attributes are removed (and go back to inheriting from the parent style), but some are not, including numbering style (Outline and Numbering) and some attributes from borders.

The numbering style case is particularly problematic, because the UI does not distinguish between "don't do anything" and "no numbering". If you attach a numbering style to a paragraph style and later go back and choose "None", it will mean "no numbering", so subsequent applications of that style forcibly remove all numbering styles as well as manual formatted numbering. I haven't yet checked whether this problem has been reported.

The fact that the button is broken was mentioned in bug 42763 comment 4, but I couldn't find a bug report.

Bug 89826 is related, but this needs to be fixed regardless.

I suspect that this problem has existed since before version 3.3, but for now I'll set the version to 6.0.1.1.

Steps to Reproduce:
Navigate to relevant tab for some style attribute for some style and press "Standard" then "Apply" or "Okay".

Actual Results:  
All attributes for the tab removed.

Expected Results:
Some attributes fail to be removed.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Buovjaga 2018-03-07 16:23:24 UTC
I could not reproduce the Numbering style issue, but from Borders I noticed Width does not reset. Yet, that was the *only* one that misbehaved.
The style I modified was picked randomly: Footer paragraph style.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 856c57f20f9b07c686a854e0ccbb6ee3b0ee4791
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 7th 2018
Comment 2 Kenneth Hanson 2018-03-10 14:10:25 UTC
I think shadows was one of the other properties on the borders tab that refused to reset, in the same manner as numbering.

But it sounds like I need to check more thoroughly if you couldn't reproduce the problem with numbering.
Comment 3 Buovjaga 2018-03-10 14:59:44 UTC
(In reply to Kenneth Hanson from comment #2)
> I think shadows was one of the other properties on the borders tab that
> refused to reset, in the same manner as numbering.

Shadow resets fine for me.
Comment 4 QA Administrators 2019-03-11 03:47:45 UTC Comment hidden (obsolete)
Comment 5 Kenneth Hanson 2019-11-02 03:30:04 UTC
As of v6.3.2.2, problems with borders seem to fixed, at least for a fresh test document.

No change to the numbering problem.
Comment 6 Mike Kaganski 2020-10-14 14:07:15 UTC
(In reply to Buovjaga from comment #1)
> I could not reproduce the Numbering style issue

It does not work for me. Nor the other controls on that tab get reset to defaulted values for me.

Tested with 3.3.0, 5.5.0, and 7.0.2.
Comment 7 Mike Kaganski 2020-10-14 14:08:03 UTC
(In reply to Mike Kaganski from comment #6)
> ... to defaulted values ...

I meant "inherited", of course.
Comment 8 sdc.blanco 2021-02-27 16:55:44 UTC
Modifying summary to be more informative/accurate.

confirm that Numbering Style (now "List Style") does not get reset to the value of the "inherited from" style.

and extend the problem to *all* the controls on the Outline & Numbering (or at present "Outline & List") tab.

Values for Outline Level and Line Numbering can be changed, but are not reset by "standard".

Tested with:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e60bebd4c5257b0f592d27c74399de1498ac725b
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DK); UI: en-US
Calc: threaded
Comment 9 QA Administrators 2023-02-28 03:19:44 UTC Comment hidden (obsolete)
Comment 10 sdc.blanco 2023-02-28 09:14:00 UTC
repro

On "Outline & List" tab there are three options:
Outline Level, List Style, Include this paragraph in line numbering
If the values of these options are changed (and applied), then "Reset to Parent"
does not reset them to the parent values.

Tested with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c41e872ed248f804249ecf4d65c4afc2e426e329
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: CL threaded(In reply to Mike Kaganski from comment #6)

Updating summary (to reflect new labels)
Updating version (based on comment 6)
Comment 11 Commit Notification 2023-11-21 15:56:22 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c95f406fcde65e383cff90842ff66e55bfabfc79

tdf#115871 - Reset outline and list options to parent settings

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.