tdf#115871 - Reset outline and list options to parent settings

Added the various items of the controls in the outline and list options
tab to the range container. Otherwise, the main dialog does not have any
knowledge about the options to reset to the parent settings.

Change-Id: Icc9f862e741eb0457cfb1c74e64324809c143ab3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159787
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>